--- a/package.json
+++ b/package.json
@@ -17,47 +17,34 @@
     "node": "*"
   },
   "dependencies": {
-    "vue-mixins": "^0.2.5"
+    "vue-mixins": "^0.2.19"
   },
   "devDependencies": {
-    "babel-core": "^6.7.6",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-runtime": "^5.8.34",
     "chai": "^3.5.0",
     "chai-spies": "^0.7.1",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.10.0",
-    "css-loader": "^0.23.1",
     "gh-pages": "^0.11.0",
-    "jade": "^1.11.0",
-    "karma": "^0.13.22",
+    "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
     "karma-chai-dom": "^1.1.0",
     "karma-chai-spies": "^0.1.4",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-mocha": "^0.2.2",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.1.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.26",
     "karma-vue-component": "^0.1.0",
-    "karma-webpack": "^1.7.0",
-    "mocha": "^2.4.5",
-    "parse5": "^2.1.5",
-    "script-runner": "^0.1.4",
-    "style-loader": "^0.13.1",
-    "stylus-loader": "^2.0.0",
-    "template-html-loader": "0.0.3",
-    "vue": "^1.0.21",
-    "vue-compiler": "^0.1.0",
+    "karma-webpack": "^1.8.0",
+    "mocha": "^3.0.2",
+    "pug": "^2.0.0-beta6",
+    "script-runner": "^0.1.5",
+    "vue": "^1.0.26",
+    "vue-compiler": "^0.3.0",
     "vue-dev-server": "^0.2.10",
-    "vue-hot-reload-api": "^1.3.2",
-    "vue-html-loader": "^1.2.2",
-    "vue-loader": "^8.2.2",
-    "vue-style-loader": "^1.0.0",
-    "vueify-insert-css": "^1.0.0",
-    "webpack": "^1.12.15"
+    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^8.5.2",
+    "webpack": "^1.13.2"
   },
   "keywords": [
     "parallax",
@@ -70,7 +57,7 @@
     "build:webpack": "webpack --config build/webpack.config.coffee",
     "build": "run-npm build:*",
     "dev": "vue-dev-server",
-    "watch": "karma start --browsers Chrome --auto-watch --reporters spec",
+    "watch": "karma start --browsers Chromium --auto-watch --reporters spec",
     "test": "karma start --single-run",
     "preversion": "npm test",
     "version": "npm run build && git add .",
